--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <title>Comfort Cafe</title>
 </head>
 <body>
-    
+    <h1 class="blue">ブルー</h1>
+    <h1 class="red">レッド</h1>
+    <h6 class="green">グリーン</h6>
+    <ol>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>JavaScript</li>
+    </ol>
 </body>
 </html>
