--- a/index.html
+++ b/index.html
@@ -1,19 +1,37 @@
 <!DOCTYPE html>
 <html lang="ja">
-<head>
+  <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Comfort Cafe</title>
-</head>
-<body>
-    <h1 class="blue">ブルー</h1>
-    <h1 class="red">レッド</h1>
-    <h6 class="green">グリーン</h6>
-    <ol>
-        <li>HTML</li>
-        <li>CSS</li>
-        <li>JavaScript</li>
-    </ol>
-</body>
+  </head>
+  <body>
+    <div id="top">
+        <header>
+            <h1 class="heading">
+                <a href="index.html">Comfort Cafe</a>
+            </h1>
+            <nav>
+                <ul class="main-nav">
+                    <li><a href="index.html">トップ</a></li>
+                    <li><a href="news.html">ニュース</a></li>
+                    <li><a href="menu.html">メニュー</a></li>
+                </ul>
+            </nav>
+        </header>
+
+        <div class="main-visual">
+            <h2 class="main-title">心地良い時間（とき）を過ごす</h2>
+            <p>すべての疲れを忘れる<b>心地良さ</b>を追求したカフェです</p>
+            <a class="btn" href="menu.html">メニュー</a>
+        </div>
+    </div>
+
+    <footer>
+        <p><small>© 2025 Comfort Cafe</small></p>
+    </footer>
+    
+  </body>
 </html>
