--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
             <a class="btn" href="menu.html">メニュー</a>
         </div>
     </div>
+
+    <footer>
+        <p><small>© 2025 Comfort Cafe</small></p>
+    </footer>
     
   </body>
 </html>
